--- a/build.gradle
+++ b/build.gradle
@@ -6,12 +6,17 @@ buildscript {
         google()
         jcenter()
         mavenCentral()
+        maven {
+            url 'https://maven.fabric.io/public'
+        }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.4.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
-        //for Firebase
+        //Crashlytics
+        classpath 'io.fabric.tools:gradle:1.31.0'
+
         classpath 'com.google.gms:google-services:4.3.1'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
