fragments AboutUs and WriteUs moved to activitys, improved ui look, added appLayoutBar in gallery fragment, add firebase analytics, added licenses dependency, changed chani profile pic in AboutUs, added switch button to live bar. there is a problem with the editText in the ChatFragment.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,6 +9,11 @@ apply plugin: 'kotlin-kapt'
 apply plugin: 'io.fabric'
 
 android {
+    signingConfigs {
+        release {
+            storeFile file('C:\\Users\\yigre\\Documents\\rakevetKeyStore\\rakevetKeyStore.jks')
+        }
+    }
     compileSdkVersion 29
     buildToolsVersion "29.0.0"
     defaultConfig {
@@ -24,14 +29,20 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
+
+        admin {
+            initWith debug
+            applicationIdSuffix ".admin"
+        }
     }
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.0.2'
-    implementation 'androidx.core:core-ktx:1.0.2'
+    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation "androidx.appcompat:appcompat-resources:1.1.0"
+    implementation 'androidx.core:core-ktx:1.1.0'
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 
@@ -43,8 +54,11 @@ dependencies {
     implementation 'com.google.firebase:firebase-storage:19.0.0'
     implementation 'com.firebaseui:firebase-ui-storage:4.3.1'
     implementation 'com.google.firebase:firebase-analytics:17.2.0'
+    implementation 'com.google.firebase:firebase-firestore:21.2.1'
     //Crashlytics
     implementation 'com.crashlytics.sdk.android:crashlytics:2.10.1'
+    //Analytics
+    implementation 'com.google.firebase:firebase-analytics:17.2.1'
     //Navigation
     implementation "androidx.navigation:navigation-fragment-ktx:2.2.0-alpha01"
     implementation "androidx.navigation:navigation-ui-ktx:2.2.0-alpha01"
@@ -52,8 +66,6 @@ dependencies {
     implementation 'com.google.android.gms:play-services-location:17.0.0'
     //Lottie
     implementation 'com.airbnb.android:lottie:3.0.7'
-
-
     //Circle image view
     implementation 'de.hdodenhof:circleimageview:3.0.1'
     //Glide
@@ -61,6 +73,8 @@ dependencies {
     kapt 'com.github.bumptech.glide:compiler:4.9.0'
     //GraphView
     implementation 'com.jjoe64:graphview:4.2.2'
+    //AboutLibraries
+    implementation "com.mikepenz:aboutlibraries:7.0.4"
 
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.12'
