--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,32 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.improve.latetrain"
->
+        package="com.improve.latetrain">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
     <application
             android:allowBackup="true"
             android:icon="@mipmap/ic_launcher"
             android:label="@string/app_name"
             android:roundIcon="@mipmap/ic_launcher_round"
-            android:theme="@style/AppTheme.NoActionBar"
-            android:supportsRtl="true">
+            android:supportsRtl="true"
+            android:theme="@style/AppTheme.NoActionBar">
         <activity
+                android:label="@string/write_us_name"
                 android:parentActivityName=".DrawerActivity"
+                android:windowSoftInputMode="adjustPan"
+                android:screenOrientation="portrait"
+                android:name=".WriteUsActivity"
+                android:theme="@style/AppTheme.NoActionBar">
+            <meta-data
+                    android:name="android.support.PARENT_ACTIVITY"
+                    android:value=".DrawerActivity" />
+        </activity>
+        <activity
+                android:label="@string/about_us_name"
+                android:parentActivityName=".DrawerActivity"
+                android:windowSoftInputMode="adjustPan"
+                android:screenOrientation="portrait"
+                android:name=".AboutUsActivity"
+                android:theme="@style/AppTheme.NoActionBar">
+            <meta-data
+                    android:name="android.support.PARENT_ACTIVITY"
+                    android:value=".DrawerActivity" />
+        </activity>
+        <activity
                 android:name=".DrawerActivity"
                 android:label="@string/app_name"
+                android:parentActivityName=".DrawerActivity"
                 android:screenOrientation="portrait"
-                android:theme="@style/AppTheme.NoActionBar">
+                android:theme="@style/AppTheme.NoActionBar"
+                android:windowSoftInputMode="adjustPan">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-                <action android:name="android.intent.action.VIEW"/>
+                <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.intent.action.VIEW" />
 
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
     </application>
 
 </manifest>
