--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,6 +8,8 @@ apply plugin: 'kotlin-kapt'
 
 apply plugin: 'io.fabric'
 
+apply plugin: 'com.google.firebase.firebase-perf'
+
 android {
     signingConfigs {
         release {
@@ -20,8 +22,8 @@ android {
         applicationId "com.improve.latetrain"
         minSdkVersion 21
         targetSdkVersion 29
-        versionCode 2
-        versionName "1.0"
+        versionCode 3
+        versionName "1.3"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -59,6 +61,8 @@ dependencies {
     implementation 'com.crashlytics.sdk.android:crashlytics:2.10.1'
     //Analytics
     implementation 'com.google.firebase:firebase-analytics:17.2.1'
+    //Performance
+    implementation 'com.google.firebase:firebase-perf:19.0.2'
     //Navigation
     implementation "androidx.navigation:navigation-fragment-ktx:2.2.0-alpha01"
     implementation "androidx.navigation:navigation-ui-ktx:2.2.0-alpha01"
