--- a/build.gradle
+++ b/build.gradle
@@ -11,11 +11,14 @@ buildscript {
         }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.4.2'
+        classpath 'com.android.tools.build:gradle:3.5.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         //Crashlytics
         classpath 'io.fabric.tools:gradle:1.31.0'
+        //Performance
+        classpath 'com.android.tools.build:gradle:3.5.2'
+        classpath 'com.google.firebase:perf-plugin:1.3.1'
 
         classpath 'com.google.gms:google-services:4.3.1'
         // NOTE: Do not place your application dependencies here; they belong
