--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,28 +15,28 @@
             android:theme="@style/AppTheme.NoActionBar">
         <activity
                 android:label="@string/write_us_name"
-                android:parentActivityName=".DrawerActivity"
+                android:parentActivityName=".activities.DrawerActivity"
                 android:screenOrientation="portrait"
-                android:name=".WriteUsActivity"
+                android:name=".activities.WriteUsActivity"
                 android:theme="@style/AppTheme.NoActionBar">
             <meta-data
                     android:name="android.support.PARENT_ACTIVITY"
-                    android:value=".DrawerActivity" />
+                    android:value=".activities.DrawerActivity" />
         </activity>
         <activity
                 android:label="@string/about_us_name"
-                android:parentActivityName=".DrawerActivity"
+                android:parentActivityName=".activities.DrawerActivity"
                 android:screenOrientation="portrait"
-                android:name=".AboutUsActivity"
+                android:name=".activities.AboutUsActivity"
                 android:theme="@style/AppTheme.NoActionBar">
             <meta-data
                     android:name="android.support.PARENT_ACTIVITY"
-                    android:value=".DrawerActivity" />
+                    android:value=".activities.DrawerActivity" />
         </activity>
         <activity
-                android:name=".DrawerActivity"
+                android:name=".activities.DrawerActivity"
                 android:label="@string/app_name"
-                android:parentActivityName=".DrawerActivity"
+                android:parentActivityName=".activities.DrawerActivity"
                 android:screenOrientation="portrait"
                 android:theme="@style/AppTheme.NoActionBar"
                 android:windowSoftInputMode="adjustResize|stateHidden">
