--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,6 +78,15 @@ dependencies {
     implementation "com.mikepenz:aboutlibraries:7.0.4"
     //Koin
     implementation 'org.koin:koin-androidx-viewmodel:1.0.2'
+    // Room components
+    implementation "androidx.room:room-runtime:2.2.2"
+    implementation "androidx.room:room-ktx:2.2.2"
+    kapt "androidx.room:room-compiler:2.2.2"
+    androidTestImplementation "androidx.room:room-testing:2.2.2"
+    // Coroutines
+    api "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.0"
+    // ViewModel Kotlin support
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0-rc02"
 
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.12'
